# nieTTS2.0

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  PLAN.md  README.md  README_EN.md  app.py  build.py  config.json  gui_main.py  gui_v1.py  main.py  nietts.spec  pyproject.toml  pytest.ini  requirements.txt  skills-lock.json  test_hy_mt.py  version.py  web_server.py  下载模型.bat  启动.bat  启动！！！.bat  安装依赖.bat  第一步安装pynini.bat
.claude/: settings.local.json
.github/workflows/: test.yml
TTSserver/: cosyvoice_tts_server.py  edge_tts_server.py  samber_tts_server.py  tts_server.py
certificates/: certificates_server.py
config/: default.py  notifier.py  provider_voice.py
configs/: config.json
docs/: AGENTS.md  API_CONTRACT.md  FRONTEND_SPEC.md  HY-MT1.5-接入指南.md  steamvr覆盖层实现参考.md
engines/: base.py  cosyvoice_tts.py  edge_tts.py  matcha_tts.py  pipeline.py  sambert_tts.py  tts_service.py
engines/audio/: playback.py
engines/osc/: service.py
engines/rime/: __init__.py  service.py
engines/stt/: base.py  qwen3_stt.py  service.py
engines/stt/vad/: __init__.py  base.py  silero_vad.py
engines/translate/: base.py  hy_mt15_translate.py  openai_translate.py  service.py
engines/tts/: base.py  cosyvoice_tts.py  edge_tts.py  matcha_tts.py  sambert_tts.py  service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  router.ts  store.ts  useConfig.ts  ws.ts
frontend/src/components/: AppLayout.vue  AudioOSCSettings.vue  LogBar.vue  ModelDownloadSettings.vue  STTSettings.vue  SideBar.vue  TTSSettings.vue  TranslateSettings.vue  VoicePanel.vue
frontend/src/styles/: global.css
frontend/src/views/: AboutView.vue  HomeView.vue  LogsView.vue  SettingsView.vue
gui/: audio.py  bridge.py  hotkey.py  log_handler.py  main.py  overlay.py  theme.py
gui/pages/: about.py  home.py  keyboard.py  logs.py  settings.py
gui/pages/keyboard/: __init__.py  base.py  ninekey.py  numpad.py  page.py  qwerty.py  shuangpin_maps.py  symbol.py
gui/vr_overlay/: __init__.py  crosshair.py  input_handler.py  manager.py  ray_tracker.py  renderer.py  test_widget.py
gui/widgets/: header.py  sidebar.py  toggle.py  utils.py  waveform.py
index_tts/: requirements.txt
indextts/: infer.py
infer/lib/: rtrvc.py
rime/: __init__.py  _utils.py  binding.py  engine.py
rime/_data/: default.yaml  key_bindings.yaml
scripts/: download_models.py  gen_arch_diagram.py  model_registry.py
templates/: VAD_SDK.md  index.html  index_color1.html
templates/assets/: AboutView-3kmZAqVI.js  AboutView-4CMXtIyn.js  AboutView-B5UiC_TP.js  AboutView-BaiGwkQR.js  AboutView-Bh285CPu.css  AboutView-Bk6e94dE.js  AboutView-Byvu0pWn.js  AboutView-CL6xdpEU.js  AboutView-CqVeyZhS.js  AboutView-Cr4qFzw6.js  AboutView-D10tBMEC.js  AboutView-D3r8H0yV.css  AboutView-DRrKcbR7.js  AboutView-DTzA9TmL.js  AboutView-DXaYNVlA.js  AboutView-Dl5grqOw.js  AboutView-DmrqlZLU.js  AboutView-DtE2q_du.js  AboutView-DyaNbWf1.js  AboutView-G8TAYCaB.js  AboutView-IWGLJfDk.js  AboutView-jbZGD2vZ.js  Button-CxmD6HPx.js  Button-Y-UxwT3u.js  HomeView--poNDslG.css  HomeView-B6OeZ9Eq.css  HomeView-BKbtpFub.js  HomeView-BdoM4Iwr.js  HomeView-BimhvcQS.js  HomeView-BoeuTBIQ.js  HomeView-C6iSJGd5.js  HomeView-CH75WwJl.css  HomeView-CcNiGPuw.js  HomeView-CfDL02I7.css  HomeView-ClHTH0AT.js  HomeView-CpgWMHAm.js  HomeView-CvmLW7hP.js  HomeView-DA8Nk9nv.js  HomeView-DQ11C59i.js  HomeView-DYeiQuRC.js  (+113 more)
tests/: conftest.py  test_config.py  test_edge_tts.py  test_integration_pipeline.py  test_matcha_tts.py  test_qwen3_stt.py  test_services.py  test_silero_vad.py  test_stt_base.py  test_tts_base.py  test_vad_base.py  test_web_server.py
tools/: __init__.py
(+8 files in other folders)
