[project]
name = "nietts"
version = "2.5.0"
description = "TTS + Translation + STT desktop app for VR social platforms"
requires-python = "==3.14.2"

dependencies = [
    # 核心运行时
    "numpy>=2.4",
    "sherpa-onnx>=1.13",
    "sherpa-onnx-core>=1.13",
    "miniaudio>=1.71",
    "edge-tts>=7.2",
    "quart>=0.20",
    "quart-cors>=0.8",
    "httpx>=0.28",
    "openai>=2.21",
    "cryptography>=46.0",
    # GUI
    "PySide6>=6.11",
    "qasync>=0.28",
    # TTS 引擎（阿里云）
    "dashscope>=1.25",
    # OSC（VRChat）
    "python-osc>=1.9",
    # VR 覆盖层（SteamVR）
    "openvr>=2.0",
    # 模型下载
    "huggingface-hub>=0.20",
    "modelscope>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "soundfile>=0.13",
    "scipy>=1.17",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: End-to-end pipeline tests (requires model files and network)",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"gui/theme.py" = ["E501"]
